fixed margin and padding issue on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,6 +7,11 @@ h2 {
   margin-bottom: 20px;
 }
 
+.col-md-12, .col-md-7, .col-md-5 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .navbar-default {
   background-color: #222;
   color: #fff;
@@ -30,7 +35,9 @@ h2 {
 }
 
 .row {
-  padding: 1%;
+  padding: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .portfolio-item .screenshot-placeholder {
@@ -136,7 +143,7 @@ h2 {
   text-align: center;
 }
 
-footer .row {
+footer {
   background: #222;
   color: #fff;
   padding: 12px 0;
@@ -151,6 +158,13 @@ footer p {
 @media (min-width: 768px) {
   .row {
     padding: 1% 5%;
+    margin-left: -15;
+    margin-right: -15;
+  }
+
+  .col-md-12, .col-md-7, .col-md-5 {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   .portfolio-description {
